tests/error/comprehension_errors/multi_use1.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(qs: linst[qubit], xs: list[int]) -> linst[qubit]:
13:        return [q for q in qs for x in xs]
                   ^
GuppyTypeError: Variable `q` with linear type `qubit` would be used multiple times when evaluating this comprehension
